--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "astro-icon": "1.1.0",
     "colorjs.io": "^0.5.0",
     "mdast-util-to-string": "^4.0.0",
+    "node": "^20.13.0",
     "overlayscrollbars": "^2.6.1",
     "pagefind": "^1.0.4",
     "reading-time": "^1.5.0",
