--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
     "@rollup/plugin-yaml": "^4.1.2",
     "@tailwindcss/typography": "^0.5.10",
     "stylus": "^0.63.0"
-  }
+  },
+  "packageManager": "pnpm@8.15.5"
 }
